# rist

./: .dockerignore  .gitignore  AUTHORS.md  Cargo.toml  DockerFile  LICENSE  Readme.md  docker-compose.yaml
db/: files.db-shm  files.db-wal  users.db-shm  users.db-wal
frontend/: 401.html  404.html  authorization.css  authorization.html  dash.css  dash.html  global.css  index.css  index.html  medal.html  unfinished.html  upload.css  upload.html  youtube.css  youtube.html
src/: background_worker.rs  config.rs  main.rs  state.rs  utils.rs
src/db/: file.rs  mod.rs  user.rs  video.rs
src/routes/: api.rs  catchers.rs  download.rs  index.rs  medal.rs  mod.rs  upload.rs  youtube.rs
