[package]
name = "rist"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket-governor = "0.2.0-rc.3"
serde = "1.0.208"
serde_json = "1.0.125"
tokio = { version = "1.39.2", features = ["full"] }

# TODO: Remove when new SQLX version is released
# JSONB support if needed
# https://github.com/launchbadge/sqlx/commit/352b02de6af70f1ff1bfbd15329120589a0f7337
sqlx = { git = "https://github.com/launchbadge/sqlx.git", rev = "352b02de6af70f1ff1bfbd15329120589a0f7337", features = [ "runtime-tokio", "sqlite", "macros"] }
sha2 = "0.10.8"
hex = "0.4.3"
uuid = { version = "1.10.0", features = ["v4"] }
reqwest = "0.12.7"
regex = "1.10.6"
